# desdeo-website

./: .gitignore  README.md  pyproject.toml
desdeo/: manage.py
desdeo/about/: admin.py  models.py  views.py
desdeo/about/migrations/: 0001_initial.py  0002_auto_20191025_1031.py  0002_auto_20191204_1000.py  0003_auto_20191204_1315.py  0004_downloadable.py  0005_video.py
desdeo/biographies/: admin.py  models.py  views.py
desdeo/biographies/migrations/: 0001_initial.py  0002_auto_20191024_1106.py  0003_auto_20191024_1136.py  0004_auto_20191112_1033.py  0005_auto_20191112_1324.py  0006_bio_keywords.py  0007_auto_20191216_1059.py  0008_auto_20191216_1104.py  0009_auto_20191216_1105.py  0010_bio_order.py
desdeo/blog/: admin.py  models.py  views.py
desdeo/blog/migrations/: 0001_initial.py  0002_auto_20191112_2018.py  0003_auto_20200206_1557.py
desdeo/blog/templatetags/: markdown_filter.py
desdeo/desdeo/: settings.py  urls.py  wsgi.py
desdeo/desdeoframework/: admin.py  apps.py  models.py  views.py
desdeo/desdeoframework/migrations/: 0001_initial.py
desdeo/frontpage/: admin.py  models.py  views.py
desdeo/frontpage/migrations/: 0001_initial.py  0002_auto_20191111_1144.py  0003_auto_20191111_1207.py  0004_carouselimages.py  0005_carouselimages_description.py  0006_auto_20191112_0922.py  0007_auto_20191112_1444.py  (+7 more)
desdeo/getinvolved/: apps.py  models.py  views.py
desdeo/materials/: admin.py  models.py  views.py
desdeo/news/: models.py  views.py
desdeo/publications/: admin.py  models.py  views.py
desdeo/software/: admin.py  models.py  views.py
(+44 files in other folders)
