[tool.poetry]
name = "desdeo-website"
version = "0.1.0"
description = "The website for the DESDEO framework implemented using Django."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
