[tool.poetry]
name = "desdeo-website"
version = "0.1.0"
description = "The website for the DESDEO framework implemented using Django."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
flake8 = "^3.7"
black = "^19.3b0"
Pillow = "^8.3"
Markdown = "^3.1"
Markdown2 = "^2.3"
django-stdimage = "^5.0"
django-cleanup = "^4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
